Removes footer parallax - If viewport size changes, whitespace would sometimes show up under the footer. Removing the parallax on it fixed that. - Also decreasing font size in blockquotes on smaller screen sizes

--- a/styles/main.less
+++ b/styles/main.less
@@ -163,7 +163,12 @@ header {
     .font-blockquote;
 
     border-left: 0;
+    font-size: @font-size-article-blockquote;
     padding: (@margin-md+@margin-sm) @margin-sm;
+
+    @media (max-width: @screen-xs-max) {
+      font-size: @font-size-article-blockquote-xs;
+    }
 
     p {
       margin: 0 @margin-md;
